change title to fit in one line and connect db

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
 <section class="header">
-    <h1 class="pl-3">Time for a Tech Blog</h1>
+    <h1 class="pl-3">Tech Talk Time</h1>
 </section>
 <section class="welcome">
     <h1>Welcome to the Tech Blog!</h1>
