add js functionality and change styles to make more user friendly

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 :root {
-    --primary-color:  rgb(71, 70, 70);
-    --secondary-color: white;
+    --primary-color:  pink;
+    --secondary-color: black;
 }
 
 body {
